# monte_carlo

./: .gitignore  Player.py  README.md  cached_data.py  events.py  main.py  pyproject.toml  setup_test_data.py
.github/workflows/: ci.yml
classes/: Player.py
constants/: events.py  players.py
src/monte_carlo/: cli.py  events.py
src/monte_carlo/classes/: Player.py
src/monte_carlo/constants/: players.py
src/monte_carlo/utils/: players.py
tests/: test_cli.py  test_data_utils.py  test_error.py  test_free_pass.py  test_ground_out.py  test_long_double.py  test_long_single.py  test_medium_single.py  test_player_integration.py  test_short_double.py  test_short_single.py  test_strike_out.py
utils/: players.py
