[project]
name = "monte-carlo"
version = "0.1.0"
description = "Monte Carlo Simulator calculating Runs Created for any MLB player for any year"
authors = [
    {name = "matthewhatch",email = "mhatch73@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tqdm (>=4.67.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false