[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "monte-carlo"
version = "0.1.0"
description = "Monte Carlo Simulator calculating Runs Created for any MLB player for any year"
authors = ["matthewhatch <mhatch73@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "monte_carlo", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.4.1"
pandas = "^3.0.0"
beautifulsoup4 = "^4.14.3"
tqdm = "^4.67.2"
requests = "^2.32.5"

[tool.poetry.scripts]
monte-carlo = "monte_carlo.cli:main"